--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family:  'system-ui', 'Times New Roman', Times, serif;
     margin: 0;
+    padding: 0;
 }
 .page-container {
     background-image: linear-gradient(to left, #f2dc6e, #fa67d8);
@@ -10,23 +11,27 @@ body {
 
 .navbar {
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
    
 }
 
-.navbar-div {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
 
 .navbar-list {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     list-style-type: none;
     align-items: center;
     margin-top: 10px;
     margin-bottom: 5px;
     margin-left: 150px;
+}
+
+.nav-list-1 {
+    display: flex;
+    flex-direction: row;
+    
 }
 
 .navbar-list-item {
@@ -36,10 +41,24 @@ body {
     font-size: 15px;
 }
 
+.nav-list-2 {
+    display: flex;
+    flex-direction: row;
+    
+}
+.nav-link {
+    text-decoration: none;
+    color: #000;
+}
+
 .icon {
     font-size: 20px;
     margin: 10px;
     margin-right: 30px;
+}
+
+.btn {
+    display: none;
 }
 
 
@@ -58,9 +77,6 @@ body {
         margin-bottom: 5px;
         margin-left: 5px;
     }
-    .navbar-list-sm {
-        display: none;
-    }
 
     .navbar-list-item {
         margin-left: 10px;
@@ -73,12 +89,6 @@ body {
     }
 }
 
-@media  screen and (min-width: 768px) {
-    .navbar-list-sm {
-        display: none;
-    }
-    
-}
 
 @media screen and (min-width: 320px) and (max-width: 767px)  {
     .page-container {
@@ -86,23 +96,65 @@ body {
         height: auto;
         padding-bottom: 30px;
     }
-    .navbar-div {
-        display: flex;
+    
+    
+    .btn {
+        display: block;
+    }
+
+    .menu-div {
+        display: block;
         flex-direction: row;
-        justify-content: flex-end;
+        margin-left: auto;
+        
     }
 
     .navbar-list {
-        display: none;
-    }
-
-
-    .navbar-list-sm {
         display: flex;
-        flex-direction: row;
-        
+        flex-direction: column;
+        position: fixed;
+        width: 250px;
+        height: 50vh;
+        background-color: #fff;
+        top: 30px;
+        left: -100%;
+        padding: 10px 0px;
+        z-index: 10;
+        transition: all 0.5s ease-in-out;
+        margin-left: 0px;
 
     }
+
+    .nav-list-1 {
+        display: flex;
+        flex-direction: column;
+        margin-left: 0px;
+    }
+
+    .navbar-list.display {
+        left: 0px;
+        transition: all 0.5s ease-in-out;
+    }
+
+    .navbar-list-item {
+        margin-top: 10px;
+        font-family: monospace;
+        font-size: 15px;
+    }
+
+    .nav-link {
+        display: block;
+        margin: 10px;
+
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 0px;
+        left: 180px;
+        margin: 25px;
+    }
+    
     
 }
 
